--- a/produtos.html
+++ b/produtos.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br" itemscope itemtype=" http://schema.org/WebPage">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Fun Papelaria</title>
     <link rel="stylesheet" href="style.css">
